--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -15,6 +15,9 @@ nav{
     height: 70px;
     background-color: rgb(21, 19, 19);
 }
+nav div{
+    font-family: "Edu AU VIC WA NT Hand", cursive;
+}
 nav ul{
     justify-content: center;
     display: flex;
@@ -30,4 +33,22 @@ nav ul li{
     display: flex;
     justify-content: space-around;
     margin: 23px 0px;
+}
+.fistSection > div{
+    width: 30%;
+}
+.leftSection{
+    font-family: "Playwrite AT", cursive;
+    font-size: 2rem;
+    margin: 30px 0px;
+}
+.p{
+    color: #f006f0;
+}
+.rightSection img{
+    width: 90%;
+    
+}
+#element1, #element2{
+    color: #f006f0;
 }
