--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -1,127 +1,182 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
 }
-body{
+
+body {
     background-color: black;
     color: white;
 }
-#element1, #element2, #element3{
+
+#element1,
+#element2,
+#element3 {
     color: #f006f0;
 }
-div hr{
-    width: 150px;
-    margin: 13px 0px 21px 0px;
-}
 
-/* NAV bar */
-header{
-    position: sticky;
-    top: 0;
-}
-nav{
-    display: flex;
-    justify-content: space-around;
-    align-items: center ;
-    height: 70px;
-    background-color: rgb(21, 19, 19);
-}
-nav div{
-    font-family: "Edu AU VIC WA NT Hand", cursive;
-}
-nav ul{
-    font-size: 1.5rem;
-    justify-content: center;
-    display: flex;
-}
-nav ul li{
-    list-style:none ;
-    margin: 0px 25px;
-}
-nav ul li a{
-    text-decoration: none;
-    color: white;
-}
-nav ul li a:hover{
-    text-decoration: underline;
-    color: rgb(94, 91, 91);
-    font-size: 1.4rem;
-}
-.left{
-    font-size: 2rem;
-}
-
-/* Fist Section */
-.fistSection{
-    display: flex;
-    justify-content: space-around;
-    margin: 50px 0px;
-}
-.fistSection > div{
-    width: 30%;
-}
-.leftSection{
-    font-family: "Playwrite AT", cursive;
-    font-size: 2rem;
-    margin: 30px 0px;
-}
-.rightSection img{
-    width: 550px;
-    height: 350px;
-}
-.name{
-    color: #f006f0;
-}
-hr{
-    margin:48px 84px 32px;
+hr {
+    margin: 48px 84px 32px;
     border: 0px;
     height: 0.5px;
     background-color: #ec8cec;
 }
 
+div hr {
+    width: 150px;
+    margin: 13px 0px 21px 0px;
+}
+
+/* NAV bar */
+header {
+    position: sticky;
+    top: 0;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 70px;
+    background-color: rgb(21, 19, 19);
+}
+
+nav div {
+    font-family: "Edu AU VIC WA NT Hand", cursive;
+}
+
+nav ul {
+    font-size: 1.5rem;
+    justify-content: center;
+    display: flex;
+}
+
+nav ul li {
+    list-style: none;
+    margin: 0px 25px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+    color: rgb(94, 91, 91);
+    font-size: 1.4rem;
+}
+
+.left {
+    font-size: 2rem;
+}
+
+/* Fist Section */
+.fistSection {
+    display: flex;
+    justify-content: space-around;
+    margin: 50px 0px;
+}
+
+.fistSection>div {
+    width: 30%;
+}
+
+.leftSection {
+    font-family: "Playwrite AT", cursive;
+    font-size: 2rem;
+    margin: 30px 0px;
+}
+
+.rightSection img {
+    width: 550px;
+    height: 350px;
+}
+
+.name {
+    color: #f006f0;
+}
+
 /* Second Section */
-.secondSection{
+.secondSection {
     max-width: 80vw;
     margin: auto;
 }
-.intro{
+
+.intro {
     font-family: "Lora", serif;
     font-size: 1.6rem;
     margin-bottom: 32px;
 }
-strong{
+
+strong {
     color: #f358f3;
 }
-.skills h2{
+
+.skills h2 {
     margin-bottom: 10px;
 }
-.white{
+
+.white {
     background-color: white;
     margin-bottom: 20px;
 }
-.fist{
-    background-color: #f358f3;
-    height: 28px;
-    width: 100%; 
-}
-.second{
+
+.fist {
     background-color: #f358f3;
     height: 28px;
     width: 100%;
 }
-.third{
+
+.second {
+    background-color: #f358f3;
+    height: 28px;
+    width: 100%;
+}
+
+.third {
     background-color: #f358f3;
     height: 28px;
     width: 80%;
 }
-.fourth{
+
+.fourth {
     background-color: #f358f3;
     height: 28px;
     width: 50%;
 }
 
-.thirdSection{
+/* Third Section */
+.thirdSection {
+    max-width: 80vw;
+    margin: auto;
+}
+
+.card {
+    display: table-cell;
+    box-shadow: 0 4px 8px 2px rgb(245, 4, 197);
+    transition: 0.3s;
+    width: 25%;
+}
+
+.card:hover {
+    box-shadow: 0 10px 20px 1px rgba(237, 5, 148, 0.699);
+}
+
+.container {
+    padding: 2px 16px;
+}
+
+h3 {
+    text-align: center;
+}
+
+.card hr {
+    margin-left: 70px;
+}
+
+/*Fourth Section*/
+.fourthSection{
     max-width: 80vw;
     margin: auto;
 }
