--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -79,13 +79,28 @@ nav ul li a:hover {
 }
 
 .fistSection>div {
-    width: 30%;
+    width: 36%;
 }
 
 .leftSection {
     font-family: "Playwrite AT", cursive;
     font-size: 2rem;
     margin: 30px 0px;
+}
+.leftSection .btn{
+    background: black;
+    color: white;
+    border: 3px solid white;
+    padding: 12px;
+    font-size: 20px;
+    border-radius: 50%;
+    margin-top: 25px;
+    box-shadow: 0 0px 4px 2px rgb(245, 4, 197);
+    transition: 0.3s;
+}
+.leftSection .btn:hover{
+    box-shadow: 0 4px 8px 2px rgba(237, 5, 148, 0.699);
+    border: 3px solid rgb(45, 43, 43);
 }
 
 .rightSection img {
