--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -257,65 +257,73 @@ h3 {
     max-width: 80vw;
     margin: auto;
 }
+
 /* FORM */
 .form-control {
-	margin-bottom: 10px;
-	padding-bottom: 20px;
+    margin-bottom: 10px;
+    padding-bottom: 20px;
 }
+
 .form-control label {
-	display: inline-block;
+    display: inline-block;
     margin-bottom: 5px;
     font-weight: bold;
 }
-.form-control input {
-	border: 2px solid #f0f0f0;
-	border-radius: 25px;
-	display: block;
-	font-family: inherit;
-	font-size: 14px;
-	font-weight: bold;
-	padding: 10px;
-	width: 50%;
-}
-.form-control input:hover {
-	border-color: black;
-}
-.form-control input:focus {
-	outline: 0;
-	border-color: #777;
-}
-.form-control.success input {
-	border-color: #2ecc71;
-}
-.form-control.error input {
-	border-color: #e74c3c;
-}
-.form-control span {
-	color: #e74c3c;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	visibility: hidden;
-}
-.form-control.error span {
-	visibility: visible;
-}
-/* From End */
 
-/* Button */
+.form-control input {
+    border: 2px solid #f0f0f0;
+    border-radius: 25px;
+    display: block;
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px;
+    width: 50%;
+}
+
+.form-control input:hover {
+    border-color: black;
+}
+
+.form-control input:focus {
+    outline: 0;
+    border-color: #777;
+}
+
+.form-control.success input {
+    border-color: #2ecc71;
+}
+
+.form-control.error input {
+    border-color: #e74c3c;
+}
+
+.form-control span {
+    color: #e74c3c;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+}
+
+.form-control.error span {
+    visibility: visible;
+}
+
 .form .btn button {
-	background: linear-gradient(to left, rgb(161, 196, 253), rgb(194, 233, 251));
-	border: 2px solid #f0f0f0;
-	border-radius: 25px;
-	color: black;
-	display: block;
-	font-family: inherit;
+    background: linear-gradient(to left, rgb(161, 196, 253), rgb(194, 233, 251));
+    border: 2px solid #f0f0f0;
+    border-radius: 25px;
+    color: black;
+    display: block;
+    font-family: inherit;
     font-size: 16px;
     font-weight: bold;
-	padding: 10px;
-	margin-top: 20px;
-	width: 10%;
+    padding: 10px;
+    margin-top: 20px;
+    width: 10%;
 }
+
 .form .btn button:hover {
     background: linear-gradient(to right, rgb(161, 196, 253), rgb(194, 233, 251));
 }
@@ -327,4 +335,20 @@ textarea {
     font-size: 1.6rem;
     font-family: "work sans";
     width: 100%;
-  }
+}
+/* Footer */
+footer{
+    display: flex;
+    height: 70px;
+    margin-top: 10px;
+    background-color: rgb(21, 19, 19);
+}
+.icon a{
+    margin-left: 10px;
+    font-size: 2rem;
+    color: white;
+}
+.Copyright{
+    margin: 10px;
+    font-size: larger;
+}
