--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -42,7 +42,7 @@ nav {
 }
 
 nav div {
-    font-family: "Edu AU VIC WA NT Hand", cursive;
+    font-family: "Cedarville Cursive", cursive;
 }
 
 nav ul {
