--- a/css/media.css
+++ b/css/media.css
@@ -40,6 +40,7 @@
         justify-content: space-around;
         align-items: center;
         height: 70px;
+        width: auto;
         background-color: rgb(21, 19, 19);
     }
     
