--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -38,6 +38,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     height: 70px;
+    width: 100%;
     background-color: rgb(21, 19, 19);
 }
 
