--- a/css/media.css
+++ b/css/media.css
@@ -169,11 +169,17 @@
     }
 
     .container {
-        width: 230%;
+        display: flex;
+        flex-direction: column;
+        font-size: 1.9rem;
+    }
+
+    .card{
+        width: 105%;
     }
 
     .card hr {
-        margin-left: 50px;
+        margin-left: 185px;
         width: 40%;
     }
 
