--- a/css/media.css
+++ b/css/media.css
@@ -3,6 +3,10 @@
         width: 120%;
     }
 
+    .left {
+        margin-right: 32%;
+    }
+
     hr {
         width: 102%;
     }
@@ -43,6 +47,10 @@
 @media screen and (max-width: 768px) {
     nav {
         width: 140%;
+    }
+
+    .left {
+        margin-right: 24%;
     }
 
     hr {
@@ -95,6 +103,10 @@
         width: 200%;
     }
 
+    .left {
+        margin-right: 6%;
+    }
+
     .fistSection {
         flex-direction: column-reverse;
     }
@@ -122,7 +134,7 @@
         font-size: 1.9rem;
     }
 
-    .card{
+    .card {
         width: 150%;
     }
 
@@ -153,6 +165,10 @@
         width: 210%;
     }
 
+    .left {
+        margin-right: 15%;
+    }
+
     .fistSection {
         flex-direction: column-reverse;
     }
@@ -180,7 +196,7 @@
         font-size: 1.9rem;
     }
 
-    .card{
+    .card {
         width: 150%;
     }
 
