--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -106,9 +106,10 @@ nav ul li a:hover {
     background: black;
     color: white;
     border: 3px solid white;
+    cursor: pointer;
     padding: 12px;
     font-size: 20px;
-    border-radius: 50%;
+    border-radius: 25%;
     margin-top: 25px;
     box-shadow: 0 0px 4px 2px rgb(245, 4, 197);
     transition: 0.3s;
@@ -340,6 +341,7 @@ h3 {
     border: 2px solid #f0f0f0;
     border-radius: 25px;
     color: black;
+    cursor: pointer;
     display: block;
     font-family: inherit;
     font-size: 16px;
